<resources>
    <string name="app_name">GoalGeta2</string>
    <string name="title_activity_login">Sign in</string>

    <string name="signin">sign in</string>
    <string name="signup_caption">Join thousands of other users</string>
    <string name="signup">sign up</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="phone">phone no</string>
    <string name="password">password</string>
    <string name="cfn_password">confirm password</string>
    <string name="terms">Terms of Service</string>
    <string name="signin_caption">Sign in to your account</string>

    <string name="edittext_hint_username"><font size="15">username</font></string>
    <string name="edittext_hint_email"><font size="15">email</font></string>
    <string name="edittext_hint_phone"><font size="15">phone no</font></string>
    <string name="edittext_hint_password"><font size="15">password</font></string>
    <string name="edittext_hint_cnfpasssword"><font size="15">confirm password</font></string>

    <string name="forgot_pass">forgot password?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_goals">Goals</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_goals">CreateGoals</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="snack_bar_text">DELETED</string>
</resources>
