<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/background_img"/>

        <ProgressBar
            android:id="@+id/signup_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="400dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/signin"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:fontFamily="@font/adamina"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/white_edged_button"
                android:text="@string/signin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_caption"
                android:textColor="@color/white"
                android:fontFamily="@font/adamina"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="24sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp">

                <EditText
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/adamina"
                    android:background="@drawable/grey_edit_text"
                    android:hint="@string/edittext_hint_username"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/adamina"
                    android:textColor="@color/white"
                    android:background="@drawable/grey_edit_text"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/adamina"
                    android:textColorHint="@color/white"
                    android:background="@drawable/grey_edit_text"
                    android:inputType="phone"
                    android:hint="@string/phone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/adamina"
                    android:textColorHint="@color/white"
                    android:background="@drawable/grey_edit_text"
                    android:inputType="textWebPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/signup_cnfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/adamina"
                    android:textColorHint="@color/white"
                    android:background="@drawable/grey_edit_text"
                    android:inputType="textWebPassword"
                    android:hint="@string/cfn_password"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/TOC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onClick"
                android:fontFamily="@font/adamina"
                android:textColor="@color/main_color"
                android:text="@string/terms" />

            <Button
                android:id="@+id/signup"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:fontFamily="@font/adamina"
                android:textAllCaps="false"
                android:background="@drawable/btn_color"
                android:textColor="@color/white"
                android:text="@string/signup"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>