<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="300dp"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/adamina"
                android:text="@string/signin_caption"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/signin_email"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:drawablePadding="16dp"
                    android:paddingLeft="16dp"
                    android:fontFamily="@font/adamina"
                    android:textColor="@color/main_color"
                    android:background="@drawable/fade_btn_color"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/signin_password"
                    android:textColorHint="@color/main_color"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:fontFamily="@font/adamina"
                    android:paddingLeft="16dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/main_color"
                    android:background="@drawable/fade_btn_color"
                    android:inputType="textWebPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:layout_gravity="right"
                android:fontFamily="@font/adamina"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:textAllCaps="false"
                android:fontFamily="@font/adamina"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:background="@drawable/btn_color"
                android:text="@string/signin"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>